Update profile image file extension to .png

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ footer{background:#0a2540;color:#fff;text-align:center;padding:15px}
 
 <body>
 <header>
-<img src="profile.jpg">
+<img src="profile.jpg.png">
 <h1>Nikhil Jangir</h1>
 <p>Machine Maintenance & Automation Engineer</p>
 </header>
