--- a/index.html
+++ b/index.html
@@ -2,48 +2,85 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Nikhil Jangir | Machine Maintenance & Automation Engineer</title>
+<title>Nikhil Jangir | Machine Repair Engineer & Team Leader</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-body{margin:0;font-family:Arial;background:#f4f6f8;color:#333}
-header{background:#0a2540;color:#fff;text-align:center;padding:40px 20px}
-header img{width:150px;height:150px;border-radius:50%;border:4px solid #fff}
-section{max-width:900px;margin:auto;padding:30px 20px}
-h2{color:#0a2540;border-bottom:2px solid #ddd}
-footer{background:#0a2540;color:#fff;text-align:center;padding:15px}
+body{
+  margin:0;
+  font-family:Segoe UI, Arial, sans-serif;
+  background:#f4f6f8;
+  color:#333;
+}
+header{
+  background:#0a2540;
+  color:#fff;
+  text-align:center;
+  padding:45px 20px;
+}
+header img{
+  width:160px;
+  height:160px;
+  border-radius:50%;
+  border:5px solid #fff;
+  object-fit:cover;
+}
+header h1{margin:15px 0 5px}
+header p{margin:0;font-size:17px;opacity:0.95}
+
+section{
+  max-width:1050px;
+  margin:25px auto;
+  background:#fff;
+  padding:30px;
+  border-radius:8px;
+}
+h2{
+  color:#0a2540;
+  border-bottom:3px solid #0a2540;
+  padding-bottom:6px;
+}
+ul{line-height:1.8}
+footer{
+  background:#0a2540;
+  color:#fff;
+  text-align:center;
+  padding:15px;
+  margin-top:30px;
+}
 </style>
 </head>
 
 <body>
+
 <header>
-<img src="profile.jpg.png">
-<h1>Nikhil Jangir</h1>
-<p>Machine Maintenance & Automation Engineer</p>
+  <img src="profile.jpg.png" alt="Nikhil Jangir">
+  <h1>Nikhil Jangir</h1>
+  <p>Machine Repair Engineer | Team Leader – Machine Maintenance & Automation</p>
 </header>
 
 <section>
-<h2>About Me</h2>
-<p>Machine Maintenance & Automation Engineer with 3+ years experience in industrial maintenance, automation systems and preventive maintenance.</p>
+<h2>Professional Summary</h2>
+<p>
+Accomplished Machine Repair Engineer (L4.2) and Team Leader with over 5 years of
+experience in industrial machine maintenance, modification, and automation
+support within large-scale mobile manufacturing environments.
+</p>
+<p>
+Currently working in the Machine Modification Department at DBG India Technology
+Pvt Ltd, handling advanced multi-axis machinery, RF testing systems, pneumatic
+and air-pressure-based machines, and high-precision assembly equipment.
+Recognised for improving MTTR, MTBF, and OEE through structured breakdown
+analysis and cost-effective machine modification initiatives.
+</p>
 </section>
 
 <section>
-<h2>Skills</h2>
+<h2>Key Machinery & Systems Experience</h2>
 <ul>
-<li>PLC & Automation Basics</li>
-<li>Servo Drives, Sensors, VFD</li>
-<li>Preventive & Breakdown Maintenance</li>
-<li>Hydraulic & Pneumatic Systems</li>
-<li>Basic understanding of CNC / VMC operation & safety</li>
-</ul>
-</section>
-
-<section>
-<h2>Contact</h2>
-<p>LinkedIn: <a href="https://www.linkedin.com/in/nikhil-jangir-40296a18b" target="_blank">View Profile</a></p>
-</section>
-
-<footer>
-© 2025 Nikhil Jangir
-</footer>
-</body>
-</html>
+<li>Battery Rolling Machines (BRT) – repair & precision calibration</li>
+<li>BTB (Board-to-Board) Pressing Machines – alignment & optimisation</li>
+<li>CCD Vision Machines – LokS & Innovision software support</li>
+<li>Idle Current Testers & Screw Machines – CCD positioning & remote control</li>
+<li>Plasma Cleaning Machines (SDP-3200, SDP-5200F, SDP-5200PRO)</li>
+<li>Back Cover Pressing Machines (YH1–YH4) – back cover,
