--- a/index.html
+++ b/index.html
@@ -3,39 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Nikhil Jangir | Machine Repair Engineer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
         body {
             margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Arial, sans-serif;
             background: #f4f6f8;
             color: #333;
         }
 
         header {
-            background: #0b2545;
+            background: #0a66c2;
             color: white;
-            padding: 40px 20px;
             text-align: center;
+            padding: 40px 20px;
         }
 
         header img {
-            width: 150px;
-            height: 150px;
+            width: 160px;
+            height: 160px;
             border-radius: 50%;
-            object-fit: cover;
             border: 4px solid white;
+            object-fit: cover;
             margin-bottom: 15px;
-        }
-
-        header h1 {
-            margin: 10px 0 5px;
-        }
-
-        header h3 {
-            font-weight: normal;
-            margin: 0;
         }
 
         section {
@@ -48,9 +38,9 @@
         }
 
         h2 {
-            border-bottom: 2px solid #0b2545;
+            color: #0a66c2;
+            border-bottom: 2px solid #ddd;
             padding-bottom: 5px;
-            color: #0b2545;
         }
 
         ul {
@@ -58,17 +48,10 @@
         }
 
         footer {
-            background: #0b2545;
-            color: white;
             text-align: center;
             padding: 15px;
-            margin-top: 30px;
-        }
-
-        .contact a {
-            color: #0b2545;
-            text-decoration: none;
-            font-weight: bold;
+            margin-top: 20px;
+            color: #666;
         }
     </style>
 </head>
@@ -76,7 +59,7 @@
 <body>
 
 <header>
-    <img src="profile.jpg" alt="Nikhil Jangir">
+    <img src="profile.jpg.png" alt="Nikhil Jangir">
     <h1>Nikhil Jangir</h1>
     <h3>Machine Repair Engineer | Team Leader</h3>
 </header>
@@ -84,73 +67,36 @@
 <section>
     <h2>About Me</h2>
     <p>
-        Accomplished Machine Repair Engineer (L4.2) with 3+ years of experience in industrial maintenance,
-        machine modification, and automation support within high-volume mobile manufacturing environments.
-        Currently working as Team Leader in the Machine Modification Department at DBG India Technology Pvt Ltd.
-        Known for reducing downtime, improving MTTR, MTBF, and OEE through effective troubleshooting,
-        preventive maintenance, and strategic machine upgrades.
+        I am an experienced Machine Repair Engineer with strong hands-on knowledge in
+        pneumatic systems, small air pressuring machines, mobile antenna testing,
+        idle current testing, and production line maintenance.
     </p>
-</section>
-
-<section>
-    <h2>Professional Experience</h2>
-
-    <h3>DBG India Technology Pvt Ltd – Bawal, Haryana</h3>
-    <p><b>Machine Repair Engineer (L4.2) – Team Leader</b> | July 2023 – Present</p>
-    <ul>
-        <li>Leading machine breakdown troubleshooting to minimise production downtime.</li>
-        <li>Improved MTTR, MTBF and OEE through effective maintenance strategies.</li>
-        <li>PLC program updates using FPWIN GR7 with supplier coordination.</li>
-        <li>HMI modifications using Weinview software.</li>
-        <li>RF testing using CMW100 & CMW500 with Eragon and HQ software.</li>
-        <li>Repair & calibration of Battery Rolling, BTB, CCD and Idle Current Test machines.</li>
-        <li>Maintenance of Plasma Cleaning, Glue Dispensing, Zebra Printer machines.</li>
-        <li>Handling industrial robotic arms (J1–J6 axes and Cartesian systems).</li>
-        <li>Machine modification and fixture optimisation for cost reduction.</li>
-        <li>Basic operational awareness of CNC/VMC machine safety and production environments.</li>
-    </ul>
-
-    <h3>Senstek India Pvt Ltd – Manesar, Haryana</h3>
-    <p><b>Machine Repair Engineer</b> | Nov 2022 – July 2023</p>
-    <ul>
-        <li>Maintenance and troubleshooting of camera module manufacturing machines.</li>
-    </ul>
-
-    <h3>TXD (India) Technology Pvt Ltd – Bawal</h3>
-    <p><b>Graduate Engineer Trainee</b> | Jan 2020 – Oct 2022</p>
-    <ul>
-        <li>Hands-on training in mobile display manufacturing machinery.</li>
-    </ul>
-
-    <h3>Adani Power – Pokhran, Rajasthan</h3>
-    <p><b>Supervisor – 33/132kV Substation</b> | Aug 2019 – Jan 2020</p>
 </section>
 
 <section>
     <h2>Technical Skills</h2>
     <ul>
-        <li>Machine Maintenance & Breakdown Troubleshooting</li>
-        <li>PLC & HMI Program Support</li>
-        <li>RF Testing (CMW100 / CMW500)</li>
-        <li>Pneumatic & Pressing Machines</li>
-        <li>Industrial Robotics & Automation Support</li>
-        <li>Preventive & Predictive Maintenance</li>
+        <li>Pneumatic parts & small air pressuring machines</li>
+        <li>Mobile antenna testing (CMW100 / CMW500)</li>
+        <li>Idle current testing & troubleshooting</li>
+        <li>Preventive & breakdown maintenance</li>
+        <li>Production support & cost reduction activities</li>
+        <li>Basic understanding of CNC / VMC operations</li>
     </ul>
 </section>
 
 <section>
-    <h2>Contact</h2>
-    <p class="contact">
-        📍 Village Dancholi, Tehsil Narnaul, District Mahendragarh, Haryana – 123001<br><br>
-        📧 Email: Nikhilkishanpura@gmail.com<br>
-        📞 Phone: +91 8447107097<br>
-        🔗 LinkedIn: <a href="https://www.linkedin.com/in/nikhil-jangir-40296a18b" target="_blank">View Profile</a>
+    <h2>Experience</h2>
+    <p>
+        Worked on multiple industrial machines, ensuring minimum downtime,
+        improved MTTR, and higher machine efficiency through systematic maintenance
+        and quick fault diagnosis.
     </p>
 </section>
 
 <footer>
-    © 2025 Nikhil Jangir | Professional Resume Website
+    © 2025 Nikhil Jangir
 </footer>
 
 </body>
-  </html>
+</html>
