Revise index.html for content and style enhancements
Updated content and styling in index.html for improved presentation and clarity.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Nikhil Jangir | Machine Repair Engineer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             background: #f4f6f8;
             color: #333;
         }
@@ -15,8 +16,8 @@
         header {
             background: #0a66c2;
             color: white;
+            padding: 30px 20px;
             text-align: center;
-            padding: 40px 20px;
         }
 
         header img {
@@ -25,16 +26,12 @@
             border-radius: 50%;
             border: 4px solid white;
             object-fit: cover;
-            margin-bottom: 15px;
         }
 
         section {
             max-width: 900px;
             margin: auto;
-            background: white;
-            padding: 30px;
-            margin-top: 20px;
-            border-radius: 8px;
+            padding: 20px;
         }
 
         h2 {
@@ -48,10 +45,11 @@
         }
 
         footer {
+            background: #222;
+            color: white;
             text-align: center;
             padding: 15px;
-            margin-top: 20px;
-            color: #666;
+            margin-top: 30px;
         }
     </style>
 </head>
@@ -67,35 +65,56 @@
 <section>
     <h2>About Me</h2>
     <p>
-        I am an experienced Machine Repair Engineer with strong hands-on knowledge in
-        pneumatic systems, small air pressuring machines, mobile antenna testing,
-        idle current testing, and production line maintenance.
+        I am a skilled Machine Repair & Maintenance Engineer with strong experience in
+        breakdown maintenance, preventive maintenance, and cost reduction activities.
+        I have hands-on expertise in industrial machines and team handling.
     </p>
 </section>
 
 <section>
-    <h2>Technical Skills</h2>
+    <h2>Skills</h2>
     <ul>
-        <li>Pneumatic parts & small air pressuring machines</li>
-        <li>Mobile antenna testing (CMW100 / CMW500)</li>
-        <li>Idle current testing & troubleshooting</li>
-        <li>Preventive & breakdown maintenance</li>
-        <li>Production support & cost reduction activities</li>
-        <li>Basic understanding of CNC / VMC operations</li>
+        <li>Machine Breakdown & Preventive Maintenance</li>
+        <li>Servo Motor & Drive Troubleshooting</li>
+        <li>Pneumatic & Hydraulic Systems</li>
+        <li>PLC Basics & Sensors</li>
+        <li>OEE, MTTR, MTBF Improvement</li>
+        <li>Team Handling & Shift Management</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Machines Worked On</h2>
+    <ul>
+        <li>Glue Dispensing Machines</li>
+        <li>Assembly Line Machines</li>
+        <li>Conveyor Systems</li>
+        <li>Servo-Based Automation Machines</li>
+        <li>Pneumatic Press & Fixtures</li>
     </ul>
 </section>
 
 <section>
     <h2>Experience</h2>
     <p>
-        Worked on multiple industrial machines, ensuring minimum downtime,
-        improved MTTR, and higher machine efficiency through systematic maintenance
-        and quick fault diagnosis.
+        Specialized in repairing and maintaining production machines with focus on
+        reducing downtime, improving productivity, and increasing MTBF.
+    </p>
+</section>
+
+<section>
+    <h2>Contact</h2>
+    <p>
+        📍 Village Dancholi, Tehsil Narnaul,<br>
+        District Mahendragarh, Haryana – 123001
+    </p>
+    <p>
+        🔗 GitHub: https://nikjangir.github.io
     </p>
 </section>
 
 <footer>
-    © 2025 Nikhil Jangir
+    © 2025 Nikhil Jangir | Portfolio Website
 </footer>
 
 </body>
