--- a/index.html
+++ b/index.html
@@ -2,65 +2,78 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Nikhil Jangir | Machine Repair & Automation Engineer</title>
+<title>Nikhil Jangir | Manufacturing & Automation Engineer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
 *{box-sizing:border-box}
-body{margin:0;font-family:'Poppins',sans-serif;background:#eef2f7;color:#222}
+body{margin:0;font-family:'Poppins',sans-serif;background:#f4f7fb;color:#222}
+a{text-decoration:none}
 
-/* NAVY THEME */
-.hero{background:linear-gradient(135deg,#081c34,#0a2a52);color:#fff;padding:90px 20px}
+.hero{
+background:linear-gradient(135deg,#061b33,#0a2d55);
+color:#fff;padding:90px 20px
+}
 .hero-inner{
 max-width:1200px;margin:auto;
-display:flex;gap:50px;align-items:center
+display:grid;grid-template-columns:320px 1fr;
+gap:60px;align-items:center
 }
-
-/* PHOTO LEFT */
-.hero-photo img{
+.hero img{
 width:280px;height:280px;border-radius:50%;
 border:6px solid rgba(255,255,255,.25);
 object-fit:cover
 }
-
 .hero h1{font-size:44px;margin:0}
-.hero h2{font-weight:400;margin:12px 0;color:#d6e4ff}
-.hero p{font-size:16px;line-height:1.75;max-width:560px}
-.hero .info{margin-top:18px;font-size:14px;color:#c7d8ff}
+.hero h2{font-weight:400;margin:10px 0;color:#cfe0ff}
+.hero p{font-size:16px;line-height:1.8;max-width:650px}
+.hero .info{margin-top:15px;font-size:14px;color:#dbe6ff}
+
+.social a{
+display:inline-block;margin:12px 10px 0 0;
+color:#fff;font-size:15px
+}
 
 .section{max-width:1200px;margin:80px auto;padding:0 20px}
-.section h3{font-size:32px;margin-bottom:25px;color:#081c34}
+.section h3{font-size:32px;margin-bottom:30px;color:#061b33}
 
-.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:30px}
-.card{background:#fff;padding:32px;border-radius:18px;box-shadow:0 12px 35px rgba(0,0,0,.08)}
-.card h4{margin-top:0;color:#081c34}
-.card p{font-size:15.5px;line-height:1.8}
+.cards{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
+gap:30px
+}
+.card{
+background:#fff;padding:32px;border-radius:18px;
+box-shadow:0 12px 35px rgba(0,0,0,.08)
+}
+.card h4{margin-top:0;color:#061b33}
+.card p{line-height:1.85;font-size:15.5px}
 
 .timeline{display:grid;gap:40px}
-.job{background:#fff;padding:38px;border-radius:18px;box-shadow:0 12px 35px rgba(0,0,0,.08)}
-.job h4{margin:0;font-size:24px;color:#081c34}
+.job{
+background:#fff;padding:38px;border-radius:18px;
+box-shadow:0 12px 35px rgba(0,0,0,.08)
+}
+.job h4{margin:0;font-size:24px;color:#061b33}
 .job span{font-size:14px;color:#666}
 .job p{margin-top:18px;line-height:1.9}
 
 .tags{display:flex;flex-wrap:wrap;gap:12px}
-.tag{background:#e4ecf8;padding:10px 16px;border-radius:30px;font-size:14px}
-
-footer{background:#081c34;color:#cfd9ff;text-align:center;padding:35px 20px;font-size:14px}
-
-/* FLOATING ICONS */
-.float-btn{
-position:fixed;right:20px;
-width:55px;height:55px;border-radius:50%;
-display:flex;align-items:center;justify-content:center;
-font-size:26px;color:#fff;text-decoration:none;
-box-shadow:0 8px 20px rgba(0,0,0,.35);z-index:999
+.tag{
+background:#e3ecfb;padding:10px 16px;
+border-radius:30px;font-size:14px
 }
-.whatsapp{bottom:20px;background:#25D366}
-.linkedin{bottom:85px;background:#0A66C2}
+
+footer{
+background:#061b33;color:#cfdcff;
+text-align:center;padding:35px 20px;font-size:14px
+}
 
 @media(max-width:900px){
-.hero-inner{flex-direction:column;text-align:center}
+.hero-inner{grid-template-columns:1fr;text-align:center}
+.hero img{margin:auto}
 }
 </style>
 </head>
@@ -71,25 +84,31 @@ box-shadow:0 8px 20px rgba(0,0,0,.35);z-index:999
 <section class="hero">
 <div class="hero-inner">
 
-<div class="hero-photo">
 <img src="profile.jpg.png" alt="Nikhil Jangir">
-</div>
 
 <div>
 <h1>Nikhil Jangir</h1>
-<h2>Machine Repair & Automation Engineer | Team Leader</h2>
+<h2>Manufacturing & Automation Engineer | Team Leader</h2>
+
 <p>
-Hands-on Machine Repair Engineer with strong shop-floor experience across
-mobile manufacturing, automation-based assembly lines, testing systems
-and electrical infrastructure. Currently leading machine modification
-and reliability improvement activities at DBG India Technology Pvt Ltd.
+Manufacturing engineer with 6+ years of hands-on experience in machine repair,
+modification and production reliability improvement. Strong exposure to quality
+control tools, process stabilisation and continuous improvement in high-volume
+manufacturing environments.
 </p>
+
 <div class="info">
-📍 Village Dancholi, Narnaul, Mahendragarh, Haryana – 123001<br>
+📍 Dancholi, Narnaul, Mahendragarh, Haryana – India<br>
 📧 Nikhilkishanpura@gmail.com | 📞 +91 8447107097
 </div>
+
+<div class="social">
+<a href="https://wa.me/918447107097" target="_blank">WhatsApp</a>
+<a href="https://www.linkedin.com/in/nikhil-jangir-40296a18b" target="_blank">LinkedIn</a>
+<a href="https://www.instagram.com/nik_jangir?igsh=d2w5bXQyMmg5dXNh" target="_blank">Instagram</a>
 </div>
 
+</div>
 </div>
 </section>
 
@@ -99,54 +118,59 @@ and reliability improvement activities at DBG India Technology Pvt Ltd.
 <div class="cards">
 
 <div class="card">
-<h4>Pressing & Assembly Machines</h4>
+<h4>Machine Reliability & Modification</h4>
 <p>
-Back cover pressing, lens pressing, camera deco pressing and touch panel
-assembly with press force calibration and fixture alignment.
+Hands-on machine repair, troubleshooting and modification to improve reliability,
+reduce breakdown recurrence and ensure stable long-term operation.
 </p>
 </div>
 
 <div class="card">
-<h4>Online Glue Dispensing Systems</h4>
+<h4>Automation & Precision Control</h4>
 <p>
-Path calibration, dispensing accuracy optimisation, nozzle alignment
-and defect control during continuous production.
+Worked on axis-controlled and automation-based machines ensuring accuracy,
+repeatability and precise control of critical process parameters.
 </p>
 </div>
 
 <div class="card">
-<h4>Plasma Cleaning Machines & Controllers</h4>
+<h4>Quality Control & Process Stability</h4>
 <p>
-Plasma controller repair, parameter tuning, interlock validation
-and bonding quality stabilisation.
-</p>
-</div>
-
-<div class="card">
-<h4>RF Antenna Testing</h4>
-<p>
-CMW100 & CMW500 testing using Eragon and HQ software,
-antenna alignment and 4G/5G band validation.
-</p>
-</div>
-
-<div class="card">
-<h4>Axis-Controlled Automation</h4>
-<p>
-Multi-axis machines, robotic arms and Cartesian systems
-with homing accuracy and sensor feedback correction.
-</p>
-</div>
-
-<div class="card">
-<h4>Machine Modification & Documentation</h4>
-<p>
-Machine modification execution, fixture optimisation,
-PCN/ECN documentation and new model readiness.
+Active involvement in quality control activities, non-conformity handling
+and continuous process improvement using standard quality tools.
 </p>
 </div>
 
 </div>
+</section>
+
+<!-- QUALITY METRICS -->
+<section class="section">
+<h3>Manufacturing Performance & Quality Excellence</h3>
+<ul>
+<li>OEE improvement through breakdown reduction and machine stabilisation</li>
+<li>MTTR reduction and MTBF improvement using structured troubleshooting</li>
+<li>LAR improvement through process validation and parameter control</li>
+<li>LRR reduction using 8D, 5-Why and Red Bin analysis</li>
+<li>Production Yield (PY) and First Pass Yield (FPY) improvement</li>
+</ul>
+</section>
+
+<!-- QUALITY TOOLS -->
+<section class="section">
+<h3>Quality Tools & Process Control Expertise</h3>
+<p>
+Hands-on application of quality tools for defect prevention, root cause analysis
+and non-conformity control during production processes.
+</p>
+<ul>
+<li><strong>7 QC Tools:</strong> Check Sheet, Pareto Chart, Fishbone Diagram, Histogram,
+Control Chart, Scatter Diagram and Flow Chart for data-driven decision making</li>
+<li><strong>5 Core Quality Tools:</strong> APQP, PPAP, FMEA, MSA and SPC for process control
+and quality assurance</li>
+<li><strong>Non-Conformity Handling:</strong> Identification, containment, root cause analysis
+and corrective & preventive action implementation to prevent recurrence</li>
+</ul>
 </section>
 
 <!-- EXPERIENCE -->
@@ -155,39 +179,39 @@ PCN/ECN documentation and new model readiness.
 <div class="timeline">
 
 <div class="job">
-<h4>DBG India Technology Pvt Ltd, Bawal</h4>
-<span>Machine Repair Engineer (L4.2) – Team Leader | July 2023 – Present</span>
+<h4>DBG India Technology Pvt Ltd – Bawal</h4>
+<span>Machine Repair Engineer (L4.2) – Team Leader | Jul 2023 – Present</span>
 <p>
-Leading breakdown handling, MTTR reduction, MTBF improvement and OEE enhancement.
-Hands-on with pressing machines, plasma cleaning controllers, online glue
-dispensing, RF antenna testing, axis machines and PLC/HMI stabilisation.
+Leading machine maintenance, breakdown handling and modification activities for
+high-volume manufacturing lines. Supporting MTTR reduction, MTBF improvement and
+OEE enhancement through structured problem solving and preventive actions.
 </p>
 </div>
 
 <div class="job">
-<h4>Senstek India Pvt Ltd, Manesar</h4>
-<span>Machine Repair Engineer | Nov 2022 – July 2023</span>
+<h4>Senstek India Pvt Ltd – Manesar</h4>
+<span>Machine Repair Engineer | Nov 2022 – Jul 2023</span>
 <p>
-Maintenance support for mobile camera manufacturing lines
-with high precision assembly and quality focus.
+Supported precision manufacturing machines with focus on breakdown control,
+quality improvement and process stability.
 </p>
 </div>
 
 <div class="job">
-<h4>TXD (India) Technology Pvt Ltd, Bawal</h4>
+<h4>TXD (India) Technology Pvt Ltd – Bawal</h4>
 <span>Graduate Engineer Trainee | Jan 2020 – Oct 2022</span>
 <p>
-Training in mobile display manufacturing, production equipment
-and preventive maintenance systems.
+Gained strong exposure to manufacturing operations, machine maintenance,
+quality systems and shop-floor best practices.
 </p>
 </div>
 
 <div class="job">
-<h4>Adani Power, Pokhran</h4>
+<h4>Adani Power – Pokhran</h4>
 <span>Supervisor – 33/132kV Substation | Aug 2019 – Jan 2020</span>
 <p>
-Supervised high-voltage operations, electrical safety
-and power distribution systems.
+Supervised electrical substation operations ensuring safety and reliable
+power distribution.
 </p>
 </div>
 
@@ -196,41 +220,40 @@ and power distribution systems.
 
 <!-- MACHINES -->
 <section class="section">
-<h3>Machines & Systems</h3>
+<h3>Machines & Systems Experience</h3>
 <div class="tags">
-<span class="tag">Pressing & Assembly</span>
-<span class="tag">Battery Rolling (BRT)</span>
-<span class="tag">BTB Pressing</span>
-<span class="tag">Axis Automation</span>
-<span class="tag">Glue Dispensing</span>
-<span class="tag">Plasma Cleaning</span>
-<span class="tag">RF Testing</span>
-<span class="tag">CMW100 / CMW500</span>
-<span class="tag">Idle Current Testers</span>
-<span class="tag">CCD Vision</span>
-<span class="tag">Robotic Arms</span>
-<span class="tag">PLC / HMI</span>
+<span class="tag">Pressing & Assembly Machines</span>
+<span class="tag">Glue Dispensing Machines</span>
+<span class="tag">Plasma Cleaning Machines</span>
+<span class="tag">Axis-Controlled Automation</span>
+<span class="tag">Industrial Robotic Arms</span>
+<span class="tag">CCD Vision Systems</span>
+<span class="tag">RF Antenna Testing (CMW100 / CMW500)</span>
+<span class="tag">Machine Modification & Validation</span>
 </div>
 </section>
 
-<!-- QR -->
+<!-- RESUME & QR -->
 <section class="section" style="text-align:center">
-<h3>Scan My Website</h3>
-<img src="https://api.qrserver.com/v1/create-qr-code/?size=220x220&data=https://nikjangir.github.io"
-alt="Website QR" style="margin:25px auto;display:block">
-<p>
-<a href="Nikhil_Jangir_Resume.docx" download>⬇ Download Resume</a> |
-<a href="Nikhil_Jangir_Resume.docx" target="_blank">👁 View Resume</a>
-</p>
+<h3>Resume & QR Code</h3>
+
+<a href="Nikhil_Jangir_Resume.docx" download
+style="background:#061b33;color:#fff;padding:14px 30px;border-radius:30px;display:inline-block;margin:10px">
+Download Resume (DOCX)
+</a>
+
+<a href="Nikhil_Jangir_Resume.docx" target="_blank"
+style="background:#e3ecfb;color:#061b33;padding:14px 30px;border-radius:30px;display:inline-block;margin:10px">
+View Resume
+</a>
+
+<img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://nikhiljangir.github.io"
+style="display:block;margin:30px auto">
 </section>
 
 <footer>
-© 2025 Nikhil Jangir · Professional Engineering Portfolio
+© 2025 Nikhil Jangir · Manufacturing & Automation Engineering Portfolio
 </footer>
 
-<!-- FLOATING ICONS -->
-<a class="float-btn whatsapp" href="https://wa.me/918447107097" target="_blank">🟢</a>
-<a class="float-btn linkedin" href="https://www.linkedin.com/in/nikhil-jangir-40296a18b" target="_blank">in</a>
-
 </body>
-                                    </html>
+  </html>
