--- a/index.html
+++ b/index.html
@@ -1,30 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Nikhil Jangir | Senior Equipment & Process Engineer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+ <title>Nikhil Jangir | Senior Equipment & Process Engineer</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Existing CSS -->
-  <link rel="stylesheet" href="style.css">
+<style>
+*{box-sizing:border-box}
+body{margin:0;font-family:'Poppins',sans-serif;background:#f5f7fb;color:#222}
+.hero{background:linear-gradient(135deg,#0a2540,#133b6f);color:#fff;padding:90px 20px}
+.hero-inner{max-width:1200px;margin:auto;display:grid;grid-template-columns:1fr 1fr;gap:50px;align-items:center}
+.hero img{width:280px;height:280px;border-radius:50%;border:6px solid rgba(255,255,255,.25);object-fit:cover}
+.hero h1{font-size:44px;margin:0}
+.hero h2{font-weight:400;margin:12px 0;color:#dce8ff}
+.hero p{font-size:16px;line-height:1.75;max-width:560px}
+.hero .info{margin-top:18px;font-size:14px;color:#cddcff}
+
+.section{max-width:1200px;margin:80px auto;padding:0 20px}
+.section h3{font-size:32px;margin-bottom:25px;color:#0a2540}
+
+.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:30px}
+.card{background:#fff;padding:32px;border-radius:18px;box-shadow:0 12px 35px rgba(0,0,0,.08)}
+.card h4{margin-top:0;color:#0a2540}
+.card p{font-size:15.5px;line-height:1.8}
+
+.timeline{display:grid;gap:40px}
+.job{background:#fff;padding:38px;border-radius:18px;box-shadow:0 12px 35px rgba(0,0,0,.08)}
+.job h4{margin:0;font-size:24px;color:#0a2540}
+.job span{font-size:14px;color:#666}
+.job p{margin-top:18px;line-height:1.9}
+
+.tags{display:flex;flex-wrap:wrap;gap:12px}
+.tag{background:#e8eef8;padding:10px 16px;border-radius:30px;font-size:14px}
+
+footer{background:#0a2540;color:#cfd9ff;text-align:center;padding:35px 20px;font-size:14px}
+
+@media(max-width:900px){
+.hero-inner{grid-template-columns:1fr;text-align:center}
+.hero img{margin:auto}
+}
+</style>
 </head>
 
 <body>
 
-<!-- ================= HERO ================= -->
+<!-- HERO -->
 <section class="hero">
-  <div class="hero-content">
-    <!-- Profile photo SAME rahegi -->
-    <img src="profile.jpg" alt="Nikhil Jangir" class="profile-pic">
-
-    <h1>Nikhil Jangir</h1>
-
-    <h3>
-      Senior Equipment & Process Engineer |
+<div class="hero-inner">
+<div>
+<h1>Nikhil Jangir</h1>
+<h2>Senior Equipment & Process Engineer |
       Jigs & Fixtures |
       Testing & Validation |
-      Team Leader
-    </h3>
+      Team Leader</h2>>
 
     <p>
       Senior-level Manufacturing Equipment & Process Engineer with 6.5+ years of
