Refactor contact section in index.html
Removed redundant contact information and updated layout.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@ footer{background:#0a2540;color:#cfd9ff;text-align:center;padding:35px 20px;font
 <h2>Senior Equipment & Process Engineer |
       Jigs & Fixtures |
       Testing & Validation |
-      Team Leader</h2>>
-
+      Team Leader</h2> 
     <p>
       Senior-level Manufacturing Equipment & Process Engineer with 6.5+ years of
       experience in high-volume mobile manufacturing environments. Currently
@@ -62,19 +61,14 @@ footer{background:#0a2540;color:#cfd9ff;text-align:center;padding:35px 20px;font
       machine repair, jigs & fixtures modification, testing systems, process
       reliability improvement, and IATF 16949:2016 documentation ownership.
     </p>
-
-    <p class="contact">
-      📍 Narnaul, Haryana |
-      📞 +91 84447107097 |
-      📧 nikhilkishanpura@gmail.com
-    </p>
-
-    <p class="contact">
-      🔗 linkedin.com/in/nikhil-jangir-40296a18b |
-      🌐 nikjangir.github.io
-    </p>
-  </div>
-</section>
+    <div class="info">
+     📍 Village Dancholi, Narnaul, Mahendragarh, Haryana – 123001<br>
+      📧 Nikhilkishanpura@gmail.com | 📞 +91 8447107097
+    </div>
+    </div>
+    <img src="profile.jpg.png" alt="Nikhil Jangir">
+    </div>
+    </section>
 
 <!-- ================= CORE EXPERTISE ================= -->
 <section class="container">
